added new skill

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
+                            <span>Ruby On Rails</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Python</span>
                             <span>60%</span>
                         </div>
